Merge branch 5.4.x into 6.0.x (#809)